Fix dark mode style

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -9,7 +9,7 @@ html {
 
 @media (prefers-color-scheme: dark) {
   html {
-    background-color: #000;
+    background-color: #121212;
   }
 }
 
